# MolDGui

./: .gitignore  MANIFEST.in  README.md  packages.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  macos.yml  windows.yml
orig/: MolD_v1.4_corr.py  MolD_v1.4_corr1.py
samples/: MolD_parameter_file.txt
scripts/: mold.py  mold.spec
scripts/mac/: config.sh
src/itaxotools/__pyinstaller/: hook-itaxotools.mold.gui.py
src/itaxotools/mold/: __init__.py  mold.py
src/itaxotools/mold/gui/: __init__.py  files.py  io.py  model.py  threading.py  threading_loop.py  utility.py  view.py
src/itaxotools/mold/gui/app/: __init__.py  resources.py  skin.py
src/itaxotools/mold/gui/main/: __init__.py  body.py  footer.py  header.py  main.py
src/itaxotools/mold/gui/model/: __init__.py  common.py  mold.py
src/itaxotools/mold/gui/types/: __init__.py  _type.py  common.py  mold.py
src/itaxotools/mold/gui/view/: __init__.py  common.py  mold.py
tools/: config.sh  run.py
tools/data/: mold.icns
